# wikiracer-python

./: .gitignore  README.md  experimentation.ipynb  pyproject.toml  results.txt
py_wikiracer/: internet.py  wikiracer.py
results/: presentation.md
scripts/: clear_wiki_cache.py
tests/: test_search.py
